Made changes to add db initializations and populate data

--- a/SpringShoppingStore/src/main/resources/jdbc.properties
+++ b/SpringShoppingStore/src/main/resources/jdbc.properties
@@ -9,3 +9,6 @@ hibernate.show_sql=true
 
 jpa.showSql=true
 jpa.database=MySQL
+
+jdbc.initLocation=classpath:db/initDB.sql
+jdbc.dataLocation=classpath:db/populateDB.sql
